@@ -1,5 +1,5 @@
 
-; application : View3ds ver. 0.057 - tiny .3ds files viewer.
+; application : View3ds ver. 0.059 - tiny .3ds files viewer.
 ; compiler    : FASM
 ; system      : KolibriOS
 ; author      : Macgub aka Maciej Guba
@@ -34,7 +34,8 @@ LIGHT_SIZE equ 22			       ;      |  |
 NON   =   0				       ;     -/  \-
 MMX   =   1
 SSE   =   2
-Ext   =   MMX		     ;Ext={ NON | MMX | SSE}
+SSE2  =   3
+Ext   =   MMX		    ;Ext={ NON | MMX | SSE | SSE2 }
 
 ; 0 for short names (Menuet-compatible), 1 for long names (Kolibri features)
 USE_LFN = 1
@@ -2796,6 +2797,6 @@ ret
 
    ; DATA AREA  ************************************
 
-   include 'data.inc'
+   include 'DATA.INC'
 
 MEM_END:
